infra/ingress-infra/bookapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: bookapp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookapp-svc
            port:
              number: 8082
