infra/ingress-infra/booklendingapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booklendingapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: booklendingapp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: booklendingapp
            port:
              number: 5001
