infra/ingress-infra/studentapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studentapp-ingress
  annotations:
    spec.ingressClassName: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: studentapp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: studentapp-svc
            port:
              number: 8081
